<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/Abu_Dhabi"/>
    <item android:title="@string/Abuja"/>
    <item android:title="@string/Accra"/>
    <item android:title="@string/Adamstown"/>
    <item android:title="@string/Addis_Ababa"/>
    <item android:title="@string/Algiers"/>
    <item android:title="@string/Alofi"/>
    <item android:title="@string/Amman"/>
    <item android:title="@string/Amsterdam"/>
    <item android:title="@string/Andorra_la_Vella"/>
    <item android:title="@string/Ankara"/>
    <item android:title="@string/Antananarivo"/>
    <item android:title="@string/Apia"/>
    <item android:title="@string/Ashgabat"/>
    <item android:title="@string/Asmara"/>
    <item android:title="@string/Nur_Sultan"/>
    <item android:title="@string/Asunción"/>
    <item android:title="@string/Athens"/>
    <item android:title="@string/Avarua"/>
    <item android:title="@string/Baghdad"/>
    <item android:title="@string/Baku"/>
    <item android:title="@string/Bamako"/>
    <item android:title="@string/Bandar_Seri_Begawan"/>
    <item android:title="@string/Bangkok"/>
    <item android:title="@string/Bangui"/>
    <item android:title="@string/City_of_Banjul"/>
    <item android:title="@string/Basseterre"/>
    <item android:title="@string/Beijing"/>
    <item android:title="@string/Beirut"/>
    <item android:title="@string/Belfast"/>
    <item android:title="@string/Belgrade"/>
    <item android:title="@string/Belmopan"/>
    <item android:title="@string/Berlin"/>
    <item android:title="@string/Bern"/>
    <item android:title="@string/Bishkek"/>
    <item android:title="@string/Bissau"/>
    <item android:title="@string/Bogotá"/>
    <item android:title="@string/Brasília"/>
    <item android:title="@string/Bratislava"/>
    <item android:title="@string/Brazzaville"/>
    <item android:title="@string/Bridgetown"/>
    <item android:title="@string/Brussels"/>
    <item android:title="@string/Bucharest"/>
    <item android:title="@string/Budapest"/>
    <item android:title="@string/Buenos_Aires"/>
    <item android:title="@string/Bujumbura"/>
    <item android:title="@string/Cairo"/>
    <item android:title="@string/Canberra"/>
    <item android:title="@string/Caracas"/>
    <item android:title="@string/Cardiff"/>
    <item android:title="@string/Castries"/>
    <item android:title="@string/Cayenne"/>
    <item android:title="@string/Charlotte_Amalie"/>
    <item android:title="@string/Chisinau"/>
    <item android:title="@string/Cockburn_Town"/>
    <item android:title="@string/Conakry"/>
    <item android:title="@string/Copenhagen"/>
    <item android:title="@string/Dakar"/>
    <item android:title="@string/Damascus"/>
    <item android:title="@string/Dhaka"/>
    <item android:title="@string/Dili"/>
    <item android:title="@string/Djibouti"/>
    <item android:title="@string/Dodoma"/>
    <item android:title="@string/Doha"/>
    <item android:title="@string/Douglas"/>
    <item android:title="@string/Dublin"/>
    <item android:title="@string/Dushanbe"/>
    <item android:title="@string/Edinburgh"/>
    <item android:title="@string/El_Aaiún"/>
    <item android:title="@string/Lahore_Cantonment"/>
    <item android:title="@string/Flying_Fish_Cove"/>
    <item android:title="@string/Freetown"/>
    <item android:title="@string/Funafuti"/>
    <item android:title="@string/Gaborone"/>
    <item android:title="@string/George_Town"/>
    <item android:title="@string/Grytviken"/>
    <item android:title="@string/Guatemala_City"/>
    <item android:title="@string/Gustavia"/>
    <item android:title="@string/Hagåtña"/>
    <item android:title="@string/Hamilton"/>
    <item android:title="@string/Hanga_Roa"/>
    <item android:title="@string/Hanoi"/>
    <item android:title="@string/Harare"/>
    <item android:title="@string/Hargeisa"/>
    <item android:title="@string/Havana"/>
    <item android:title="@string/Helsinki"/>
    <item android:title="@string/Honiara"/>
    <item android:title="@string/Islamabad"/>
    <item android:title="@string/Jakarta"/>
    <item android:title="@string/Jamestown"/>
    <item android:title="@string/Jerusalem"/>
    <item android:title="@string/Juba"/>
    <item android:title="@string/Kabul"/>
    <item android:title="@string/Kampala"/>
    <item android:title="@string/Kathmandu"/>
    <item android:title="@string/Khartoum"/>
    <item android:title="@string/Kiev"/>
    <item android:title="@string/Kigali"/>
    <item android:title="@string/Kingston"/>
    <item android:title="@string/Kingstown"/>
    <item android:title="@string/Kinshasa"/>
    <item android:title="@string/Kuala_Lumpur"/>
    <item android:title="@string/Kuwait_City"/>
    <item android:title="@string/La_Paz"/>
    <item android:title="@string/Libreville"/>
    <item android:title="@string/Lilongwe"/>
    <item android:title="@string/Lima"/>
    <item android:title="@string/Lisbon"/>
    <item android:title="@string/Ljubljana"/>
    <item android:title="@string/Lomé"/>
    <item android:title="@string/London"/>
    <item android:title="@string/Luanda"/>
    <item android:title="@string/Lusaka"/>
    <item android:title="@string/Luxembourg"/>
    <item android:title="@string/Madrid"/>
    <item android:title="@string/Majuro"/>
    <item android:title="@string/Malabo"/>
    <item android:title="@string/Malé"/>
    <item android:title="@string/Managua"/>
    <item android:title="@string/Manama"/>
    <item android:title="@string/Manila"/>
    <item android:title="@string/Maputo"/>
    <item android:title="@string/Marigot"/>
    <item android:title="@string/Maseru"/>
    <item android:title="@string/Mata_Utu"/>
    <item android:title="@string/Mbabane"/>
    <item android:title="@string/Mexico_City"/>
    <item android:title="@string/Minsk"/>
    <item android:title="@string/Mogadishu"/>
    <item android:title="@string/Monaco"/>
    <item android:title="@string/Monrovia"/>
    <item android:title="@string/Montevideo"/>
    <item android:title="@string/Moroni"/>
    <item android:title="@string/Moscow"/>
    <item android:title="@string/Muscat"/>
    <item android:title="@string/Nairobi"/>
    <item android:title="@string/Nassau"/>
    <item android:title="@string/Naypyidaw"/>
    <item android:title="@string/N_Djamena"/>
    <item android:title="@string/New_Delhi"/>
    <item android:title="@string/Niamey"/>
    <item android:title="@string/Nicosia"/>
    <item android:title="@string/Nouakchott"/>
    <item android:title="@string/Nouméa"/>
    <item android:title="@string/Nuku_alofa"/>
    <item android:title="@string/Nuuk"/>
    <item android:title="@string/Oranjestad"/>
    <item android:title="@string/Oslo"/>
    <item android:title="@string/Ottawa"/>
    <item android:title="@string/Ouagadougou"/>
    <item android:title="@string/Pago_Pago"/>
    <item android:title="@string/Palikir"/>
    <item android:title="@string/Panama_City"/>
    <item android:title="@string/Papeete"/>
    <item android:title="@string/Distrikt_Paramaribo"/>
    <item android:title="@string/Paris"/>
    <item android:title="@string/Philipsburg"/>
    <item android:title="@string/Phnom_Penh"/>
    <item android:title="@string/Plymouth"/>
    <item android:title="@string/Podgorica"/>
    <item android:title="@string/Port_Louis"/>
    <item android:title="@string/Port_Moresby"/>
    <item android:title="@string/Port_Vila"/>
    <item android:title="@string/Port_au_Prince"/>
    <item android:title="@string/Port_of_Spain"/>
    <item android:title="@string/Porto_Novo"/>
    <item android:title="@string/Prague"/>
    <item android:title="@string/Praia"/>
    <item android:title="@string/Pretoria"/>
    <item android:title="@string/Pyongyang"/>
    <item android:title="@string/Quito"/>
    <item android:title="@string/Rabat"/>
    <item android:title="@string/Reykjavík"/>
    <item android:title="@string/Riga"/>
    <item android:title="@string/Riyadh"/>
    <item android:title="@string/Road_Town"/>
    <item android:title="@string/Rome"/>
    <item android:title="@string/Roseau"/>
    <item android:title="@string/Saipan"/>
    <item android:title="@string/San_José"/>
    <item android:title="@string/San_Juan"/>
    <item android:title="@string/San_Marino"/>
    <item android:title="@string/San_Salvador"/>
    <item android:title="@string/Sanaa"/>
    <item android:title="@string/Santiago"/>
    <item android:title="@string/Santo_Domingo"/>
    <item android:title="@string/São_Tomé"/>
    <item android:title="@string/Sarajevo"/>
    <item android:title="@string/Seoul"/>
    <item android:title="@string/Singapore"/>
    <item android:title="@string/Skopje"/>
    <item android:title="@string/Sofia"/>
    <item android:title="@string/Tarawa"/>
    <item android:title="@string/St_Georges"/>
    <item android:title="@string/St_Helier"/>
    <item android:title="@string/St_Johns"/>
    <item android:title="@string/St_Pierre"/>
    <item android:title="@string/Stanley"/>
    <item android:title="@string/Stepanakert"/>
    <item android:title="@string/Stockholm"/>
    <item android:title="@string/Sucre"/>
    <item android:title="@string/Sukhumi"/>
    <item android:title="@string/Suva"/>
    <item android:title="@string/Taipei"/>
    <item android:title="@string/Tallinn"/>
    <item android:title="@string/Tashkent"/>
    <item android:title="@string/Tbilisi"/>
    <item android:title="@string/Tegucigalpa"/>
    <item android:title="@string/Tehran"/>
    <item android:title="@string/Thimphu"/>
    <item android:title="@string/Tirana"/>
    <item android:title="@string/Tiraspol"/>
    <item android:title="@string/Tokyo"/>
    <item android:title="@string/Tórshavn"/>
    <item android:title="@string/Tripoli"/>
    <item android:title="@string/Ts_khinvali"/>
    <item android:title="@string/Tunis"/>
    <item android:title="@string/Ulaanbaatar"/>
    <item android:title="@string/Vaduz"/>
    <item android:title="@string/Valletta"/>
    <item android:title="@string/The_Valley"/>
    <item android:title="@string/Vatican_City"/>
    <item android:title="@string/Victoria"/>
    <item android:title="@string/Vienna"/>
    <item android:title="@string/Vientiane"/>
    <item android:title="@string/Vilnius"/>
    <item android:title="@string/Warsaw"/>
    <item android:title="@string/Washington"/>
    <item android:title="@string/Wellington"/>
    <item android:title="@string/West_Island"/>
    <item android:title="@string/Willemstad"/>
    <item android:title="@string/Windhoek"/>
    <item android:title="@string/Yamoussoukro"/>
    <item android:title="@string/Yaoundé" />
    <item android:title="@string/Yaren" />
    <item android:title="@string/Yerevan" />
    <item android:title="@string/Zagreb" />


</menu>